# exam-builder

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
.claude/: settings.json
backend/: main.py  models.py  storage.py
backend/docx_builder/: builder.py
backend/routers/: export.py  papers.py  templates.py  uploads.py
docs/plans/: 2026-02-27-exam-builder-design.md  2026-02-27-exam-builder.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  main.tsx  types.ts
frontend/src/components/: ExportPanel.tsx  Layout.tsx  PaperEditor.tsx  PaperHeaderForm.tsx  QuestionCard.tsx  QuestionList.tsx  Sidebar.tsx  StylePanel.tsx  TemplatePanel.tsx
frontend/src/components/questions/: ImageQuestion.tsx  MCQQuestion.tsx  TableQuestion.tsx  TextQuestion.tsx
output docs/: Retest 2.docx
tests/: conftest.py  test_api.py  test_docx_builder.py  test_models.py  test_storage.py
